# ai-doc-gen

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  ENHANCED_WIKI_GUIDE.md  README.md  config_example.yaml  create_simple_docs.py  debug_ddd.py  debug_simple.py  full_wiki_export.py  improved_wiki_exporter.py  pyproject.toml  simple_ai_test.py  test_ai_single_context.py  test_enhanced_wiki.sh  test_file_reader.py  test_improved_ai.py  test_limited_scope.sh  test_timeout_ai.py
.ai/: config.yaml
.ai/docs/: api_analysis.md  data_flow_analysis.md  dependency_analysis.md  request_flow_analysis.md  structure_analysis.md
.ai/temp/: Application.md  ChangeLog.md  Domain.md  Quality.md
.cursor/rules/: agent-development.mdc  code-patterns.mdc  project-overview.mdc
src/: config.py  main.py
src/agents/: __init__.py  ai_rules_generator.py  analyzer.py  ddd_agent.py  ddd_analyzer_agent.py  documenter.py
src/agents/prompts/: ai_rules_generator.yaml  analyzer.yaml  ddd_analyzer.yaml  documenter.yaml
src/agents/tools/dir_tool/: list_files.py
src/agents/tools/file_tool/: file_reader.py
src/handlers/: ai_rules.py  analyze.py  enhanced_wiki_exporter.py  readme.py  wiki_exporter.py
src/utils/: logger.py  prompt_manager.py  retry_client.py
temp/: .order  Infrastructure.md  WebUi.md
temp/Application/: Application.md  Changelog.md  Domain.md  Infrastructure.md  Quality.md  Webui.md
temp/Application_Sale/: Application.md  Changelog.md  Domain.md  Infrastructure.md  Quality.md  Webui.md
temp/Application_ssrs/: Application.md  Changelog.md  Domain.md  Infrastructure.md  Quality.md  Webui.md
temp/DayaDarou_Service/: Application.md  Changelog.md  Domain.md  Infrastructure.md  Quality.md  Webui.md
temp/Domain/: Application.md  Changelog.md  Domain.md  Infrastructure.md  Quality.md  Webui.md
