[project]
name = "ai-doc-gen"
version = "1.2.0"
description = "AI-powered code documentation generator that analyzes repositories and creates comprehensive documentation"
authors = [{ name = "Milad Noroozi", email = "norooziosos@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic==2.12.0",
    "jinja2==3.1.6",
    "ujson==5.11.0",
    "pydantic-ai==1.0.15",
    "nest-asyncio==1.6.0",
    "python-gitlab==6.2.0",
    "gitpython==3.1.45",
    "logfire==4.12.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.1",
    "opentelemetry-instrumentation-httpx==0.58b0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
lint.select = ["I", "F401"]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "ruff>=0.14.0",
]

[project.scripts]
ai-doc-gen = "src.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.sources]
"src" = "src"
